--- a/homeworks/projects/html-css-snap/style.css
+++ b/homeworks/projects/html-css-snap/style.css
@@ -54,7 +54,6 @@ header a{
     content: url("./snap/images/icon-arrow-down.svg");
 }
 
-
 main {
     display: flex;
     padding-left: 12%;
@@ -65,6 +64,18 @@ main {
     height: 90%;
 }
 
+h1 {
+    font-size: 4rem;
+    font-family: sans-serif;
+}
+
+p {
+    color: #242323;
+    width: 85%;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: bold;
+}
 
 .right-img {
     width: 50%;
@@ -77,3 +88,29 @@ main {
   height: auto;
 }
 
+.img2 {
+    width: 400px;
+    height: auto;
+}
+
+.img-bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 60px 40px 25px 10px;
+    width: 110%;
+}
+
+button {
+    display: block;
+    border: none;
+    border-radius: 15px;
+    color: #fff;
+    background-color: black;
+    width: 40%;
+    height: 8%;
+    padding: 18px 10px;
+    margin: 1px 1px 3px -9px;
+    cursor: pointer;
+    text-align: center;
+}
